# AnyIDE

./: .env.example  .gitignore  CommandsToTry.md  Dockerfile  README.md  config.example.yaml  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
admin/: README.md  index.html  package.json  vite.config.ts
anyide/: admin_api.py  config.py  main.py  models.py
anyide/core/: __init__.py  audit.py  database.py  hitl.py  llm_client.py  policy.py  secrets.py  workspace.py
docs/: DOCKER_HUB_PUBLISHING.md  LLM_SYSTEM_PROMPT.md  RELEASE_BASELINE.md  SCALING.md  TOOL_CATALOG.md  UserGuide.md  acceptance_runbooks.md
examples/: config.basic.yaml  docker-compose.production.yaml  secrets.env.example
scripts/: generate_tool_docs.py
src/: __init__.py  config.py  main.py  secrets.py
tests/: __init__.py  test_admin_dashboard.py  test_api.py  test_config_auth_password.py  test_docker_api.py  test_docker_tools.py  test_fs_list.py  test_fs_search.py  test_fs_tools.py  test_fs_write.py  test_git_api.py  test_git_tools.py  test_hitl.py  test_hitl_integration.py  test_hitl_websocket.py  test_http_tools.py  test_integration.py  test_language_api.py  test_language_lsp_client.py  test_language_tools.py  test_llm_client.py  test_llm_config.py  test_load.py  test_mcp.py  test_memory_tools.py  test_module_matrix_integration.py  test_module_registry.py  test_plan_tools.py  test_policy.py  test_secrets.py  test_security.py  test_shell_execute.py  test_skills_api.py  test_skills_tools.py  test_subagent_api.py  test_tool_explorer_contract.py  test_workspace.py
(+79 files in other folders)
